# pkg/models/book.go
@@ -1,14 +1,24 @@
 package models
 
-import (
-	"time"
-)
+import "gorm.io/gorm"
 
 type BookSchema struct {
-	ID        int       `json:"id"`
-	Title     string    `json:"title"`
-	Author    string    `json:"author"`
-	Price     float64   `json:"price"`
-	CreatedAt time.Time `json:"createdAt"`
-	UpdatedAt time.Time `json:"updatedAt"`
+	gorm.Model
+	Title  string `json:"title"`
+	Author string `json:"author"`
+	Pages  int    `json:"pages"`
+	Price  int    `json:"price"`
 }
+
+func (b *BookSchema) Create(book *BookSchema) *BookSchema {
+	DBInstance.Create(&book)
+	return book
+}
+
+func (b *BookSchema) GetByTitle(title string) *BookSchema {
+	var book BookSchema
+	DBInstance.Where("title = ?", title).First(&book)
+	return &book
+}
+
+var Book = &BookSchema{}
